--- a/src/assets/css/global.scss
+++ b/src/assets/css/global.scss
@@ -140,3 +140,23 @@ app-header {
 .align-center {
     align-items: center !important;
 }
+
+.gap-4 {
+    gap: 4px;
+}
+
+.gap-8 {
+    gap: 8px;
+}
+
+.gap-12 {
+    gap: 12px;
+}
+
+.gap-16 {
+    gap: 16px;
+}
+
+.gap-20 {
+    gap: 20px;
+}
